--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,13 @@
     <string name="type">Type a word or sentence…</string>
     <string name="hint">e.g To be or not to be</string>
     <string name="selectDictionary">Select a dictionary</string>
-    <string name="google">Not satisfied with current options?</string>
+    <string name="dict_URL">URL of the dictionary</string>
+    <string name="google">Not satisfied ?</string>
+    <string name="source_l">Source language…</string>
+    <string name="target_l">Target language…</string>
+    <string name="word">word</string>
+    <string name="hint_l1">e.g French</string>
+    <string name="hint_l2">e.g English</string>
+    <string name="hint_w">e.g Umbrella</string>
+
 </resources>
