--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hint">e.g To be or not to be</string>
     <string name="selectDictionary">Select a dictionary</string>
     <string name="google">Not satisfied with current options?</string>
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
