--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Projet</string>
+    <string name="learning_service">Daily learning sessions</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="type">Type a word or sentence…</string>
     <string name="hint">e.g To be or not to be</string>
