--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="e_g_french">e.g French</string>
     <string name="e_g_english">e.g English</string>
+    <string name="search">SEARCH</string>
 </resources>
